--- a/paper-kit-2-angular-master/package.json
+++ b/paper-kit-2-angular-master/package.json
@@ -28,6 +28,8 @@
     "@angular/platform-browser": "9.0.6",
     "@angular/platform-browser-dynamic": "9.0.6",
     "@angular/router": "9.0.6",
+    "@ckeditor/ckeditor5-angular": "^1.2.3",
+    "@ckeditor/ckeditor5-build-classic": "^20.0.0",
     "@ng-bootstrap/ng-bootstrap": "6.0.0",
     "angular2-jwt": "^0.2.3",
     "bootstrap": "4.1.2",
