--- a/paper-kit-2-angular-master/package.json
+++ b/paper-kit-2-angular-master/package.json
@@ -8,8 +8,8 @@
   },
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --proxy-config proxy.conf.json",
-    "build": "ng build",
+    "start": "node server.js",
+    "build": "ng build --aot --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -34,6 +34,7 @@
     "angular2-jwt": "^0.2.3",
     "bootstrap": "4.1.2",
     "core-js": "3.6.4",
+    "express": "^4.17.1",
     "jquery": "3.2.1",
     "jw-bootstrap-switch-ng2": "2.0.1",
     "ng2-nouislider": "1.7.12",
@@ -46,6 +47,7 @@
     "primeng": "^9.1.3",
     "rxjs": "6.5.4",
     "rxjs-compat": "6.5.4",
+    "serve-favicon": "^2.5.0",
     "zone.js": "0.10.2"
   },
   "devDependencies": {
@@ -68,5 +70,9 @@
     "ts-node": "3.0.4",
     "tslint": "6.1.0",
     "typescript": "3.7.5"
+  },
+  "engines": {
+    "node": "10.16.0",
+    "npm": "6.4.1"
   }
 }
